Fixed CSS so folder works on firefox

--- a/static/site.css
+++ b/static/site.css
@@ -43,7 +43,7 @@
   	-moz-user-select: none;
   	user-select: none;
     
-    position:absolute;
+    position:relative;
     top:0;
     left:50%;
     margin-left:-75px;
@@ -67,7 +67,11 @@
     box-shadow:0 -2px 2px rgba(0,0,0,0.1), 0 1px rgba(255,255,255,0.35) inset;
     
     z-index:10;
-    
+
+    position: relative;
+    top: 0px;
+    left: 50%;
+
     font: bold 26px sans-serif;
 	color: #5A88A9;
 	text-align: center;
@@ -80,6 +84,10 @@
     background-image: -moz-linear-gradient(top, #93bad8 0%, #89afcc 10%, #5985a5 60%);
     background-image: linear-gradient(top, #93bad8 0%, #89afcc 10%, #5985a5 60%);
     
+    position: relative;
+    top: -265px;
+    left: 50%;
+
     border-radius:0 5px 0 0;
     box-shadow:0 -1px 1px rgba(0,0,0,0.15);
 }
@@ -90,9 +98,9 @@
     border: solid #000 1px;
     width:75px;
     height:60px;
-    position: absolute;
-    top: 10px;
-    left: 100px;
+    position: relative;
+    top: -83px;
+    left: 90px;
     z-index:5;
 
     -moz-transform:rotate(-60deg);
@@ -106,10 +114,10 @@
     border: solid #000 1px;
     width:75px;
     height:60px;
-    position: absolute;
-    top: 12px;
+    position: relative;
+    top: -140px;
     left: 140px;
-    z-index:5;
+    z-index:6;
 
     -moz-transform:rotate(-30deg);
     -webkit-transform:rotate(-30deg);
@@ -122,10 +130,11 @@
     border: solid #000 1px;
     width:75px;
     height:60px;
-    position: absolute;
-    top: 6px;
+
+    position: relative;
+    top: -200px;
     left: 120px;
-    z-index:5;
+    z-index:7;
 
     -moz-transform:rotate(-50deg);
     -webkit-transform:rotate(-50deg);
@@ -158,6 +167,24 @@
     -moz-transform:rotateX(-50deg);
     -webkit-transform:rotateX(-50deg);
     transform:rotateX(-50deg);
+}
+
+.folder:hover .folder-content1 {
+    transform: translate(0px,15px);
+    -ms-transform: translate(0px,15px);
+    -webkit-transform: translate(0px,15px);
+}
+
+.folder:hover .folder-content2 {
+    transform: translate(0px,-30px);
+    -ms-transform: translate(0px,-30px);
+    -webkit-transform: translate(0px,-30px);
+}
+
+.folder:hover .folder-content3 {
+    transform: translate(0px,15px);
+    -ms-transform: translate(0px,15px);
+    -webkit-transform: translate(0px,15px);
 }
 
 .folder span.title {
